--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -268,6 +268,7 @@ footer .copyright {
     height: 28rem;
   }
   #sign-up-cta {
+    margin: auto;
     position: static;
     width: auto;
     height: auto;
@@ -349,7 +350,7 @@ footer .copyright {
     padding-left: 0.5rem;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
+    width: auto;
   }
   header .content .mobile li {
     padding: 0;
@@ -363,10 +364,10 @@ footer .copyright {
   #sign-up-section {
     height: 20rem;
   }
-  #sign-up-cta h1 {
+  #sign-up-section #sign-up-cta h1 {
     font-size: 2.25rem;
   }
-  #sign-up-cta h2 {
+  #sign-up-section #sign-up-cta h2 {
     font-size: 2rem;
   }
   #features-section {
