--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -260,7 +260,8 @@ footer .copyright {
     color: white;
   }
   .main-content {
-    top: 85px;
+    justify-content: center;
+    top: 48px;
   }
   #sign-up-section {
     align-items: center;
@@ -347,10 +348,10 @@ footer .copyright {
   }
   header .content .mobile ul {
     display: flex;
-    padding-left: 0.5rem;
-    justify-content: space-around;
+    padding: 0;
+    justify-content: space-evenly;
     align-items: center;
-    width: auto;
+    width: 100%;
   }
   header .content .mobile li {
     padding: 0;
