--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -278,7 +278,8 @@ footer {
     }
   }
   .main-content {
-    top: 85px;
+    justify-content: center;
+    top: 48px;
   }
   #sign-up-section {
     align-items: center;
@@ -370,10 +371,10 @@ footer {
 
         ul {
           display: flex;
-          padding-left: 0.5rem;
-          justify-content: space-around;
+          padding: 0;
+          justify-content: space-evenly;
           align-items: center;
-          width: auto;
+          width: 100%;
         }
         li {
           padding: 0;
@@ -387,6 +388,7 @@ footer {
       }
     }
   }
+
   #sign-up-section {
     height: 20rem;
     #sign-up-cta {
