--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -375,9 +375,11 @@ footer {
           justify-content: space-evenly;
           align-items: center;
           width: 100%;
+          //margin: 0 auto;
         }
         li {
           padding: 0;
+          //margin: 0 1.5rem;
         }
         .button {
           padding: 0.1875rem 0.5rem;
@@ -432,8 +434,6 @@ footer {
     .content {
       span {
         width: 100%;
-      }
-      img {
       }
     }
   }
