--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -362,6 +362,7 @@ footer {
     .content {
       padding: 0;
       height: 3rem;
+      width: 100%;
       .desktop {
         display: none;
       }
@@ -372,14 +373,16 @@ footer {
         ul {
           display: flex;
           padding: 0;
-          justify-content: space-evenly;
+          justify-content: start;
           align-items: center;
           width: 100%;
-          //margin: 0 auto;
+          box-sizing: border-box;
+          margin: 0;
         }
         li {
           padding: 0;
-          //margin: 0 1.5rem;
+          margin: 0 1.4rem;
+          flex: 0 0 auto;
         }
         .button {
           padding: 0.1875rem 0.5rem;
@@ -394,6 +397,11 @@ footer {
   #sign-up-section {
     height: 20rem;
     #sign-up-cta {
+      width: 100%;
+      padding: 0;
+      .content {
+        width: 100%;
+      }
       h1 {
         font-size: 2.25rem;
       }
